force-app/main/default/objects/Core_Account__c/Core_Account__c.object-meta.xml
<CustomObject>
    <label>Core Account</label>
    <nameField>
        <label>Core Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Core Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>