force-app/main/default/objects/Core_Account__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Core Accounts</relationshipLabel>
    <relationshipName>Core_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>