force-app/main/default/objects/Core_Account__c/fields/Sign_up_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Sign_up_Company_Name__c</fullName>
    <label>Sign up Company Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>