force-app/main/default/objects/Core_Account__c/fields/Sign_up_Company_Website__c.field-meta.xml
<CustomField>
    <fullName>Sign_up_Company_Website__c</fullName>
    <label>Sign up Company Website</label>
    <type>Url</type>
</CustomField>