force-app/main/default/objects/Core_Account__c/fields/Sign_Up_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Sign_Up_First_Name__c</fullName>
    <label>Sign Up First Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>