force-app/main/default/objects/Core_Account__c/fields/Sign_Up_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Sign_Up_Last_Name__c</fullName>
    <label>Sign Up Last Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>