force-app/main/default/objects/Core_Account__c/fields/Sign_Up_Personal_Email__c.field-meta.xml
<CustomField>
    <fullName>Sign_Up_Personal_Email__c</fullName>
    <label>Sign Up Personal Email</label>
    <type>Email</type>
</CustomField>